相关HELPER和实体模型以及SERVICE文件

--- a/EstateDic/Web.config
+++ b/EstateDic/Web.config
@@ -11,7 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EstateDic-20160711104747.mdf;Initial Catalog=aspnet-EstateDic-20160711104747;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <!--楼盘字典库-->
+    <add key="ConnectionEstateDic" value="server=10.0.81.241;database=DB_HOUSE_DICT_SHANGHAI;uid=sa;pwd=sa@sql2016006;Connect Timeout=1200"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
