--- a/EstateDic/Web.config
+++ b/EstateDic/Web.config
@@ -13,7 +13,7 @@
   </connectionStrings>
   <appSettings>
     <!--楼盘字典库-->
-    <add key="ConnectionEstateDic" value="server=10.0.81.241;database=DB_HOUSE_DICT_SHANGHAI;uid=sa;pwd=sa@sql2016006;Connect Timeout=1200"/>
+    <add key="ConnectionEstateDic" value="server=10.0.81.241;database=DB_HOUSE_DICT_SHANGHAI;uid=sa;pwd=sa@sql2016006;Connect Timeout=1200" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -78,6 +78,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
