--- a/EstateDic/Web.config
+++ b/EstateDic/Web.config
@@ -14,6 +14,13 @@
   <appSettings>
     <!--楼盘字典库-->
     <add key="ConnectionEstateDic" value="server=10.0.81.241;database=DB_HOUSE_DICT_SHANGHAI;uid=sa;pwd=sa@sql2016006;Connect Timeout=1200" />
+    <!--云呼叫数据库-->
+    <add key="ConnectionSms" value="server=10.0.14.14;database=DBS1_APP_MAIN_USER_CALL_CENTER;uid=sa;pwd=CDCsqlP@ssw0rd;Connect Timeout=1200" />
+    <!--短信发送接口URL-->
+    <add key="MessageSend" value="http://lucene.cric.com/message/Message/messageSend.ashx" />
+    <!--短信发送接口KEY-->
+    <add key="MessageSendKey" value="FE668E1A-37B6-4647-B8F1-D7B13770DC76" />
+    <add key="SMSTarget" value="400" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
