--- a/EstateDic/EstateDic.csproj
+++ b/EstateDic/EstateDic.csproj
@@ -265,6 +265,7 @@
     </Compile>
     <Compile Include="Helper\JsonExtension.cs" />
     <Compile Include="Models\EstateDicModel.cs" />
+    <Compile Include="Models\PersonTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\PubConstant.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -305,9 +306,6 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Metadata\deploymentTemplates\apiappconfig.azureresource.json" />
     <Content Include="apiapp.json" />
     <None Include="Properties\PublishProfiles\EstateDic.pubxml" />
