--- a/EstateDic/Web.config
+++ b/EstateDic/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EstateDic-20160711104747.mdf;Initial Catalog=aspnet-EstateDic-20160711104747;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--北京乐居查询客户信息接口,连接[10.0.14.17].DB_CUSTOMER_CLOUD-->
+    <add name="CustomerInfoDBConnStr" connectionString="server = 10.0.14.17; uid = sa; pwd = CDCsqlP@ssw0rd; database = DB_CUSTOMER_CLOUD" />
   </connectionStrings>
   <appSettings>
     <!--楼盘字典库-->
@@ -21,6 +23,8 @@
     <!--短信发送接口KEY-->
     <add key="MessageSendKey" value="FE668E1A-37B6-4647-B8F1-D7B13770DC76" />
     <add key="SMSTarget" value="400" />
+    <!--北京乐居查询客户信息接口名称键值对-->
+    <add key="LejuInterfaceName1" value="客户信息查询for北京乐居"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
